[tool.poetry]
name = "fastapi-oidc"
version = "0.0.0"
description = "Simple library for using a third party authentication service like Keycloak or Auth0 with FastAPI."
authors = ["HarryMWinters <harrymcwinters@gmail.com>", "Richard Löwenström <samedii@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/HarryMWinters/fastapi-oidc"
repository = "https://github.com/HarryMWinters/fastapi-oidc"
documentation = "https://fastapi-oidc.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = ">= 0.61.0"
pydantic = ">= 1.6.1"
cachetools = ">= 4.1.1"
requests = ">= 2.24.0"
python-jose = {extras = ["cryptography"], version = ">= 3.2.0"}

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
black = "21.7b0"
pylint = "^2.6.0"
pyjwt = "^1.7.1"
sphinx = "^3.3.1"
mypy = "^0.910"
types-cachetools = "^0.1.9"
types-requests = "^2.25.0"
pre-commit = "^2.13.0"
uvicorn = "^0.15.0"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.extras]
docs = ["sphinx"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
force_single_line = "True"
known_first_party = []
known_third_party = ["app", "cachetools", "cryptography", "fastapi", "jose", "jwt", "pydantic", "pytest", "requests", "starlette", "uvicorn"]
