[tool.poetry]
name = "fastapi-oidc"
version = "0.0.11"
description = "A simple library for parsing and verifying externally issued OIDC ID tokens in fastapi."
authors = ["HarryMWinters <harrymcwinters@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/HarryMWinters/fastapi-oidc"
repository = "https://github.com/HarryMWinters/fastapi-oidc"
documentation = "https://fastapi-oidc.readthedocs.io/en/latest/"
include = ["fastapi_oidc/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">= 0.61.0"
pydantic = ">= 2.0.0"
cachetools = ">= 4.1.1"
requests = ">= 2.24.0"
python-jose = {extras = ["cryptography"], version = ">= 3.2.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
black = "^24.0.0"
pylint = "^3.0.0"
pyjwt = "^2.0.0"
sphinx = "^7.0.0"
mypy = "^1.11.0"
types-cachetools = ">=0.1.9,<6.3.0"
types-requests = "^2.25.0"
pre-commit = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = "True"
known_first_party = []
known_third_party = ["cachetools", "cryptography", "fastapi", "jose", "jwt", "pydantic", "pytest", "requests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=fastapi_oidc",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["fastapi_oidc"]
omit = ["*/tests/*"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
