[tool.poetry]
name = "keycloak-example"
version = "0.1.0"
description = ""
authors = ["Richard Löwenström <samedii@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
fastapi-oidc = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"